plugins {
	id 'fabric-loom' version '1.10-SNAPSHOT'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = "${project.archives_base_name}-${project.minecraft_version}"
}

repositories {
	mavenLocal()
	maven {
		url = "https://repo.minelittlepony-mod.com/maven/release"
	}
	maven {
		url = "https://cursemaven.com"
		content {
			includeGroup "curse.maven"
		}
	}
	maven {
		url "https://maven.jamieswhiteshirt.com/libs-release"
		content {
			includeGroup "com.jamieswhiteshirt"
		}
	}
	maven {
		// 2023년 1월 이전에 JEI 파일을 호스팅하는 메이븐의 위치
		// location of the maven that hosts JEI files before January 2023
		name = "Progwml6's maven"
		url = "https://dvs1.progwml6.com/files/maven/"
	}
	maven {
		// 2023년 1월 이후 JEI 파일을 호스팅하는 메이븐의 위치
		// location of the maven that hosts JEI files since January 2023
		name = "Jared's maven"
		url = "https://maven.blamejared.com/"
	}
	maven {
		name = "KosmX's maven"
		url = 'https://maven.kosmx.dev/'
	}
	maven {
		// JEI 파일에 대한 메이븐 미러의 위치, 폴백으로 사용
		// location of a maven mirror for JEI files, as a fallback
		name = "ModMaven"
		url = "https://modmaven.dev"
	}
	maven {
		name = "Modrinth"
		url = "https://api.modrinth.com/maven"
	}
	maven {
		name = "Fuzs Mod Resources"
		url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
	}
	maven {
		name = 'Ladysnake Mods'
		url = 'https://maven.ladysnake.org/releases'
	}
	maven {
		name = "TerraformersMC"
		url = "https://maven.terraformersmc.com/"
	}
	maven {
		url = 'https://oss.sonatype.org/content/repositories/snapshots'
	}
	maven {
		url = "https://maven.shedaniel.me/"
	}
	maven {
		url = "https://maven.terraformersmc.com/releases/"
	}
	maven {
		url = "https://maven.blamejared.com"
	}
	maven {
		url = 'https://jitpack.io'
	}
	maven {
		url = "https://mvn.devos.one/releases/"
	}
	maven {
		url = "https://maven.nova-committee.cn/releases"
	}
	maven {
		url = "https://maven.shedaniel.me/"
	}
	maven {
		url "https://cursemaven.com"
	}
	flatDir {
		dir 'libs/mods'
	}
}

loom {
	accessWidenerPath = file("src/main/resources/tacz.accesswidener")
}

dependencies {
	implementation fileTree(dir: 'libs/libraries', include: ['*.jar'])

	// 버전을 변경하려면 gradle.properties 파일을 참조
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// 패브릭 API.
	// Fabric API.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	modImplementation(include("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cardinal_components_api_version}"))
	modImplementation(include("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cardinal_components_api_version}"))
	modImplementation(include("com.sollace:fabwork:${project.fabwork_version}"))
	modImplementation(include("curse.maven:framework-549225:${project.framework_version}"))

	modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
		exclude(group: "net.fabricmc.fabric-api")
	}
	modApi include("com.terraformersmc:modmenu:${project.modmenu_version}")
	modApi include("fuzs.forgeconfigapiport:forgeconfigapiport-fabric:${project.forgeconfigapiport_version}")

	//CLONE HERE AND publishToMavenLocal https://github.com/KyoSleep1/ModernKeyBinding
	modApi include("committee.nova.mkb.fabric:mkb-1.21.1:${project.mkb_version}")

	modCompileOnly "org.embeddedt:embeddium-1.20.1:${project.embeddedt_version}"
	modCompileOnly "libs:iris:${project.iris_version}"
	modCompileOnly "libs:iris_legacy:${project.iris_old_version}"
	modCompileOnly "maven.modrinth:immediatelyfast:${project.immediatelyfast_version}"

	// 일부 보간 연산을 수행하기 위한 Apache Commons 수학 라이브러리
	// Apache Commons Math library for performing some interpolation operations
	include implementation(minecraftLibraries('org.apache.commons:commons-math3:3.6.1'))

	// 총기 제어에 사용되는 로직 및 애니메이션 상태 머신에 루아 스크립팅 언어를 도입한 LuaJ 라이브러리
	include implementation('com.github.286799714.luaj:luaj-jse:3.0.3')
	include implementation('com.github.286799714.luaj:luaj-core:3.0.3')
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	options.release = 21
	options.encoding = 'utf-8'
}

java {
	// 이 리포가 We-Cant-Coding/TACZ-Fabric가 아닐 경우 복제된 가능성이 아주 높습니다!
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	// 이 리포가 We-Cant-Coding/TACZ-Fabric가 아닐 경우 복제된 가능성이 아주 높습니다!
	// We-Cant-Coding/TACZ-Fabric 라이센스
	// We-Cant-Coding/TACZ-Fabric Licenses
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}